--- a/client/src/admin/mycards.scss
+++ b/client/src/admin/mycards.scss
@@ -21,7 +21,7 @@
 
 .mymains{
     width: 100%;
-    height:100vh;
+    height:100%;
     background-color: #0f171e;
     margin: 0;
     padding: 0;
@@ -29,11 +29,28 @@
       height:100% !important;
   }
 }
+
+.title {
+  font-size:40px;
+  font-weight: bold;
+  text-transform: capitalize;
+  width: 80%;
+  margin-bottom: 20px;
+  @include tablet {
+      font-size:30px;
+      padding-left:3%;
+    }
+}
+
 .cards{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content:start;
   align-items: center;
-  
+  padding-top:100px;
+}
+.empty-watchlist{
+color: #f2f2f2;
 }
 .mycards{
     width:75%;
@@ -43,7 +60,6 @@
     row-gap: 20px;
     column-gap: 20px;
     align-items: center;
-    padding-top:225px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
