--- a/client/src/list/list.scss
+++ b/client/src/list/list.scss
@@ -3,9 +3,9 @@
   margin-top: 10px;
 
   .listTitle {
-    color: white;
-    font-size: 20px;
-    font-weight: 500;
+    color:#f2f2f2;
+    font-size:24px;
+    font-weight:bold;
     margin-left: 50px;
   }
 
