--- a/client/src/listitem/listitem.scss
+++ b/client/src/listitem/listitem.scss
@@ -40,17 +40,41 @@
     img {
       height: 140px;
     }
-
+  .showtitle{
+    font-size:24px;
+    color: #f2f2f2;
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content:start;
+    font-weight: bold;
+  }
+  .maintitle{
+    width: 75%;
+  }
     .itemInfo {
       display: flex;
+      background-color: #000000;
       flex-direction: column;
-      padding:10px !important;
-      .icons {
+      padding:20px !important;
+      .iconsbox {
         display: flex;
-        margin-bottom: 10px;
-
+        width:25%;
+        justify-content:center;
+        height: 100%;
+        align-items: center;
+       .playicon{
+        border: 2px solid white;
+          color: #f2f2f2;
+          padding: 5px;
+          border-radius: 50%;
+          margin-right: 10px;
+          margin-top:6px;
+          font-size: 16px;
+       }
         .icon {
           border: 2px solid white;
+          color: #f2f2f2;
           padding: 5px;
           border-radius: 50%;
           margin-right: 10px;
@@ -67,21 +91,28 @@
       .itemInfoTop {
         display: flex;
         align-items: center;
+        width: 75%;
+        justify-content: space-between;
         margin-bottom: 10px;
         font-size: 14px;
+        padding-top:5px;
         font-weight: 600;
         color: gray;
 
-        .limit {
-          border: 1px solid gray;
+        .limits {
+          background-color:#333333;
+          color: #f2f2f2;
           padding: 1px 3px;
+          font-size: 15px;
           margin: 0 10px;
         }
       }
 
-      .desc {
-        font-size: 13px;
+      .description{
+        font-size: 15px;
+        color: gray !important;
         margin-bottom: 10px;
+        color: #f2f2f2;
       }
 
       .genre {
