--- a/client/src/admin/login.scss
+++ b/client/src/admin/login.scss
@@ -1,3 +1,24 @@
+:root {
+  --main-color: #0b0b0b;
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
+}
+
+@mixin tablet {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media (max-width: 480px) {
+    @content;
+  }
+}
+
 .login {
   width: 100vw;
   height:auto;
@@ -22,7 +43,7 @@
   }
 
   .container {
-    width: 100%;
+    width: auto;
     height: 100%;
     top: 0;
     left: 0;
@@ -51,6 +72,9 @@
       flex-direction: column;
       border: 1px solid #333333;
       justify-content: space-around;
+      @include mobile{
+        width:60% !important;
+      }
 
       input {
         height: 40px;
@@ -97,6 +121,9 @@
       padding-top: 10px;
       padding-bottom:7px;
       font-size:12px;
+      @include mobile{
+        font-size:9px;
+      }
      }
         span {
           margin: 4px 0;
@@ -122,6 +149,9 @@
           border: none;
           box-shadow: 0 0 3px 0 black;
           margin-top: 5px;
+          @include mobile{
+            width:60% !important;
+          }
         }
   }
 }
