--- a/client/src/admin/categories.scss
+++ b/client/src/admin/categories.scss
@@ -1,83 +1,93 @@
 :root {
-    --main-color: #0b0b0b;
+  --main-color: #0b0b0b;
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
+}
+
+@mixin tablet {
+  @media (max-width: 768px) {
+    @content;
   }
-  
-  .link {
-    color: inherit;
-    text-decoration: none;
+}
+
+@mixin mobile {
+  @media (max-width: 480px) {
+    @content;
   }
-  
-  @mixin tablet {
-    @media (max-width: 768px) {
-      @content;
-    }
+}
+
+@mixin minimobile {
+  @media (max-width: 426px) {
+    @content;
   }
-  
-  @mixin mobile {
-    @media (max-width: 480px) {
-      @content;
-    }
+}
+
+.categories-container {
+  max-width: 90%;
+  margin: 0 auto;
+  padding: 20px;
+  padding-top: 90px;
+}
+
+.loadingmessage {
+  text-align: center;
+  width: 100%;
+}
+
+.title {
+  font-size: 40px;
+  font-weight: bold;
+  padding-left:1%;
+  margin-bottom: 20px;
+
+  @include tablet {
+    font-size: 30px;
+    padding-left: 3%;
   }
-  
-  @mixin minimobile {
-    @media (max-width: 426px) {
-      @content;
-    }
+}
+
+.genres {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+
+  @include mobile {
+    justify-content: start;
   }
-  
-  .categories-container {
-    max-width:90%;
-    margin: 0 auto;
+}
+
+
+.boxes {
+  padding: 40px;
+  width: 200px;
+  margin-top: 60px;
+  background-color: #00a8e1;
+  color: #0f171e;
+  border-radius: 15px;
+  font-size: 33px;
+  border: 1px solid #0f171e;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-weight: bold !important;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+
+  @include tablet {
+    width: 150px;
     padding: 20px;
-    padding-top:90px;
+    margin-top: 2px;
+    font-size: 25px;
   }
-  
-  .title {
-    font-size:40px;
-    font-weight: bold;
-    padding-left:7%;
-    margin-bottom: 20px;
-    @include tablet {
-        font-size:30px;
-        padding-left:3%;
-      }
-  }
-  
-  .genres {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content:space-evenly;
-    width: 100%;
-    @include mobile {
-        justify-content:center;
-      }
-  }
-    
-  
-  .genre-box {
-    padding:50px;
-    width: 80%;
-    background-color:#00a8e1;
-    color:#0f171e;
-    border-radius: 15px;
-    font-size:30px;
-    border: 1px solid #0f171e;
-    display: flex;
-    justify-content:start;
-    align-items: center;
-    font-weight: bold !important;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    @include tablet {
-        width:150px;
-        padding:20px;
-        font-size:25px;
-      }
-  }
-  
-  .genre-box:hover {
-    background-color:#0f171e;
-    border: 1px solid #00a8e1;
-    color: #00a8e1;
-  }
+}
+
+.boxes:hover {
+  background-color: #0f171e;
+  border: 1px solid #00a8e1;
+  color: #00a8e1;
+}
