--- a/client/src/admin/main.scss
+++ b/client/src/admin/main.scss
@@ -25,7 +25,11 @@
     height: 100vh;
     background-color:#0f171e;
 
-
+   .num{
+    color: #f2f2f2;
+    font-size: 20px;
+    padding: 5px;
+   }
     .box{
         width: 100%;
         display: flex;
@@ -35,10 +39,11 @@
         padding-top:100px;
 
         .totalmovies , .totalseries , .totalusers{
-            font-size: 25px;
+            font-size:30px;
             font-weight: 900;
             display: flex;
             justify-content: center;
+            font-weight: bold;
             align-items: center;
             flex-direction: column;
             background-color:#000000;
