--- a/client/src/admin/categories.scss
+++ b/client/src/admin/categories.scss
@@ -84,6 +84,11 @@
     margin-top: 2px;
     font-size: 25px;
   }
+  @include minimobile{
+    width: 125px;
+    padding:15px;
+    font-size:20px;
+  }
 }
 
 .boxes:hover {
