--- a/client/src/admin/login.scss
+++ b/client/src/admin/login.scss
@@ -19,10 +19,20 @@
   }
 }
 
-.login {
-  width: 100vw;
-  height:auto;
+html {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.loginbox {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   font-family: 'Roboto', sans-serif;
+  background-color: #0f171e;
   position: absolute;
   margin: 0;
   padding: 0;
@@ -37,13 +47,13 @@
       justify-content: center;
 
       .logo {
-        height: 70px;
+        height: 130px;
       }
     }
   }
 
   .container {
-    width: auto;
+    width: 100%;
     height: 100%;
     top: 0;
     left: 0;
@@ -53,11 +63,12 @@
     justify-content: start;
 
     p {
-      color: black;
+      color: #f2f2f2;
       font-size: 28px !important;
       font-weight: bold;
       margin-bottom: 10px;
-  }
+    }
+
     #email,
     #password {
       font-size: 15px;
@@ -65,15 +76,15 @@
 
     form {
       width: 325px;
-      height:250px;
-      padding: 40px;
+      height: 250px;
+      padding:30px;
       border-radius: 10px;
       display: flex;
       flex-direction: column;
-      border: 1px solid #333333;
       justify-content: space-around;
-      @include mobile{
-        width:60% !important;
+
+      @include tablet {
+        width:85% !important;
       }
 
       input {
@@ -92,8 +103,8 @@
       }
 
       .loginButton {
-        height:35px;
-        border-radius:10px;
+        height: 35px;
+        border-radius: 10px;
         margin: 4px 0;
         background-color: gold;
         border: none;
@@ -115,43 +126,48 @@
       }
 
     }
-    .newtoamazon{
+
+    .newtoamazon {
       text-align: center;
-      color:gray;
+      color: gray;
       padding-top: 10px;
-      padding-bottom:7px;
-      font-size:12px;
-      @include mobile{
-        font-size:9px;
+      padding-bottom: 7px;
+      font-size: 12px;
+
+      @include tablet {
+        font-size: 9px;
       }
-     }
-        span {
-          margin: 4px 0;
-          color: #0b0b0b;
-          list-style-type: none;
-          font-size: 12px;
-          margin-top: 8px;
-  
-          span{
-            color: rgb(6, 104, 143);
-          }
-        }
-        .createButton {
-          padding:7px;
-          background-color: white;
-          color: black !important;
-          width: 325px;
-          padding-left: 40px;
-          padding-right: 40px;
-          font-size: 13px;
-          border-radius: 10px;
-          text-align: center;
-          border: none;
-          box-shadow: 0 0 3px 0 black;
-          margin-top: 5px;
-          @include mobile{
-            width:60% !important;
-          }
-        }
+    }
+
+    span {
+      margin: 4px 5px;
+      color: #f2f2f2;
+      list-style-type: none;
+      font-size: 11px;
+      margin-top: 8px;
+
+      span {
+        color: rgb(6, 104, 143);
+      }
+    }
+
+    .createButton {
+      padding: 7px;
+      background-color: gold;
+      color: black !important;
+      width: 250px;
+      padding-left: 40px;
+      padding-right: 40px;
+      font-size: 13px;
+      border-radius: 10px;
+      text-align: center;
+      border: none;
+      box-shadow: 0 0 3px 0 black;
+      margin-top: 5px;
+
+      @include tablet {
+        width: 60% !important;
+      }
+    }
   }
 }
