--- a/client/src/admin/register.scss
+++ b/client/src/admin/register.scss
@@ -1,27 +1,38 @@
 :root {
     --main-color: #0b0b0b;
-  }
-  
-  .link {
+}
+
+.link {
     color: inherit;
     text-decoration: none;
-  }
-  
-  @mixin tablet {
+}
+
+@mixin tablet {
     @media (max-width: 768px) {
-      @content;
+        @content;
     }
-  }
-  
-  @mixin mobile {
+}
+
+@mixin mobile {
     @media (max-width: 480px) {
-      @content;
+        @content;
     }
-  }
-  .register {
-    width: 100vw;
-    height: auto;
+}
+
+html {
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.register {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
+    background-color: #0f171e;
     position: absolute;
     margin: 0;
     padding: 0;
@@ -36,7 +47,7 @@
             justify-content: center;
 
             .logo {
-                height: 70px;
+                height: 130px;
             }
 
             .loginButton {
@@ -63,24 +74,24 @@
         justify-content: start;
 
         p {
-            color: black;
+            color: #f2f2f2;
             font-size: 28px !important;
             font-weight: bold;
             margin-bottom: 10px;
         }
 
         form {
-            width: 325px;
+            width: 325px !important;
             height: 250px;
-            padding: 40px;
+            padding: 30px;
             border-radius: 10px;
             display: flex;
             flex-direction: column;
-            border: 1px solid #333333;
             justify-content: space-around;
-            @include mobile{
-                width:60% !important;
-              }
+
+            @include tablet {
+                width: 85% !important;
+            }
         }
 
         h1 {
@@ -103,12 +114,16 @@
         input {
             height: 40px;
             border-radius: 5px;
-            margin: 4px 0;
+            margin:3px 0;
             box-shadow: none;
             padding-left: 10px;
             outline-color: transparent;
             border: 1px solid #0b0b0b;
 
+            &:focus {
+                outline: none !important;
+                box-shadow: none !important;
+            }
         }
 
         .registerButton {
@@ -128,7 +143,7 @@
 
         span {
             margin: 4px 0;
-            color: #0b0b0b;
+            color: #f2f2f2;
             list-style-type: none;
             font-size: 14px;
         }
