--- a/client/src/featured/featured.scss
+++ b/client/src/featured/featured.scss
@@ -1,5 +1,5 @@
 :root {
-  --main-color:#0f171e;
+  --main-color: #0f171e;
 }
 
 .link {
@@ -22,6 +22,14 @@
 .featured {
   height: 86vh;
   position: relative;
+  padding-top:0px;
+  @include tablet{
+     height:40vh;
+     padding-top: 20px;
+  }
+  @include mobile{
+    padding-top:50px;
+  }
 
   .category {
     position: absolute;
@@ -64,6 +72,9 @@
     color: white;
     display: flex;
     flex-direction: column;
+    @include tablet{
+      bottom: 30px;
+    }
 
     .line {
       display: flex;
@@ -72,13 +83,14 @@
         text-transform: uppercase;
         width: 60%;
 
-        @include tablet {
-          font-size:22px;
+        @include mobile {
+          font-size:15px;
+          width:70%;
         }
-      }
-
-      img {
-        width: 59px;
+        @include tablet {
+          font-size:20px;
+          width:70%;
+        }
       }
     }
 
@@ -89,48 +101,56 @@
 
       @include tablet {
         width: 60vw !important;
+        margin-bottom: 5px;
+        font-size: 14px;
       }
     }
+
     .myicon {
-      border:1px solid #0f171e;
       color: #f2f2f2;
       padding: 5px;
       border-radius: 50%;
       margin-left: 5px;
-      background-color:#333333;
-      font-size:30px;
+      background-color: #333333;
+      font-size:26px;
 
       &:hover {
-        background-color: #00a8e1;
-        border:1px solid #0f171e;
+        background-color: #f2f2f2;
         color: black;
         transition: 0.8s linear ease-in-out;
       }
 
-      @include mobile {
-        padding:5px;
-        padding: 0px;
-        margin-top:5px;
+      @include tablet {
+        padding:0px;
+        margin-top:4px;
+        font-size: 26px;
       }
     }
+
     .buttons {
       display: flex;
 
       button {
-        padding: 10px 20px;
+        padding: 5px 10px;
         border: none;
         border-radius: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size:18px;
+        font-size: 15px;
         font-weight: 500;
         margin-right: 10px;
         cursor: pointer;
-        @include mobile{
-          padding:5px 10px !important; 
+
+        @include mobile {
+          padding: 5px 10px !important;
           padding: 0px;
-          margin:5px;
+          margin: 5px;
+          font-size: 14px;
+        }
+        @include tablet {
+          padding: 0 2px !important;
+          margin: 5px;
           font-size: 14px;
         }
 
