--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -83,7 +83,6 @@
         left: 0;
         margin-top: auto;
         height: auto;
-        background-color: #0f171e;
         border-radius: 10px;
         padding: 20px;
       }
@@ -103,13 +102,14 @@
       .link {
         color: inherit;
         text-decoration: none;
-        color: #f2f2f2;
+        font-weight: bold;
+        color:gray;
 
         &:hover {
-          color: #00a8e1;
+          color: #f2f2f2;
         }
       }
-
+ 
       .closeicon {
         display: none;
 
@@ -206,8 +206,16 @@
         width: 53%;
 
         @include mobile {
-          width: 80% !important;
+          width:90% !important;
           padding: 20px;
+        }
+
+        .search{
+          font-size: 22px !important;
+
+          @include tablet {
+            font-size:16px !important;
+          }
         }
       }
 
@@ -229,26 +237,25 @@
         }
 
         @include mobile {
-          padding: 0px;
+         font-size: 20px !important;
         }
       }
 
       .search-results {
         position: absolute;
-        top: 250%;
+        top: 235%;
         left: 50%;
-        width: 51%;
+        width:55%;
         transform: translateX(-50%);
         background-color: #0f171e;
         border: 1px solid #000000;
         border-top: none;
         border-radius: 5px;
-        padding:20px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         z-index: 999;
-        @include mobile {
+        @include tablet {
           top: 235%;
-          width: 80%;
+          width:95%;
         }
 
         .search-result-item {
@@ -263,8 +270,11 @@
           &:hover{
             background-color: #f2f2f2;
   
-            .resulttitle{
+            .showtitle{
               color: #0f171e !important;
+            }
+            @include tablet {
+              font-size:16px !important;
             }
           }
 
@@ -275,16 +285,20 @@
             padding: 0px;
           }
 
-          .resulttitle {
+          .showtitle {
             font-size: 22px;
             font-weight: bold;
             color: #f2f2f2;
             padding-left:20px;
             width:75% !important;
+            @include tablet {
+              font-size:16px !important;
+            }
           }
           .resultyear{
             color:gray;
             width:25%;
+            font-size: 20px;
             font-weight: bold;
             text-align:left;
           }
