--- a/client/src/watchlist/watchlist.scss
+++ b/client/src/watchlist/watchlist.scss
@@ -1,152 +1,135 @@
 :root {
-    --main-color: #0b0b0b;
+  --main-color: #0b0b0b;
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
+}
+
+@mixin tablet {
+  @media (max-width: 768px) {
+    @content;
   }
-  
-  .link {
-    color: inherit;
-    text-decoration: none;
+}
+
+@mixin mobile {
+  @media (max-width: 480px) {
+    @content;
   }
-  
-  @mixin tablet {
-    @media (max-width: 768px) {
-      @content;
-    }
+}
+
+.mymains {
+  width: auto;
+  overflow: hidden;
+  height: 100%;
+  background-color: #0f171e;
+  margin: 0;
+  padding: 0;
+
+  @include tablet {
+    height: 100% !important;
   }
-  
-  @mixin mobile {
-    @media (max-width: 480px) {
-      @content;
-    }
-  }
-  
-  .mymains{
-      width: 100%;
-      height:100%;
-      background-color: #0f171e;
-      margin: 0;
-      padding: 0;
-      @include tablet{
-        height:100% !important;
-    }
-  }
-  
-  .title {
-    font-size:40px;
-    font-weight: bold;
-    text-transform: capitalize;
+}
+ .empty{
+  width:100%;
+  height: 100px;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  color: gray;
+  font-size: 20px;
+ }
+.myresults {
+  background-color: #0f171e;
+  padding-top: 100px !important;
+  border-top: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: auto !important;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  z-index: 999;
+
+  @include mobile {
+    top: 235%;
     width: 80%;
-    margin-bottom: 20px;
-    @include tablet {
-        font-size:30px;
-        padding-left:3%;
-      }
   }
-  
-  .cards{
-    display: flex;
-    flex-direction: column;
-    justify-content:start;
-    align-items: center;
-    padding-top:100px;
+
+  p {
+    font-size:32px;
+    color: #f2f2f2;
+    font-weight: bold;
+    width:75%;
+    text-align: left;
   }
-  .empty-watchlist{
-  color: #f2f2f2;
+}
+
+.resultitem {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  width: 75%;
+  border: 2px solid #333333;
+  margin-top: 3%;
+  border-radius: 10px;
+  padding:10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  @include tablet{
+    width: 90%;
+    justify-content:space-evenly;
   }
-  .mycards{
-      width:75%;
-      position: relative !important;
-      display: flex;
-      justify-content:start;
-      row-gap: 20px;
-      column-gap: 20px;
-      align-items: center;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      @include tablet(){
-          justify-content:center;
-          width: 100%;
-      }
+  &:hover {
+    background-color: #333333;
+    transform: translateY(-5px);
   }
-  .listItem {
-      width: 225px;
-      height: 120px;
-      background-color: #0b0b0b;
-      margin-right: 5px;
-      overflow: hidden;
-      padding: 10px;
-      cursor: pointer;
-      color: white;
-    
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    
-      video {
-        width: 100%;
-        height:150px;
-        object-fit: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-    
-      &:hover {
-        width: 325px;
-        height:auto;
-        position: relative !important;
-        top:0px !important;
-        -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
-        box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
-        border-radius: 5px;
-    
-        img {
-          height: 140px;
-        }
-    
-        .itemInfo {
-          display: flex;
-          flex-direction: column;
-          padding: 5px;
-    
-          .icons {
-            display: flex;
-            margin-bottom: 10px;
-    
-            .icon {
-              border: 2px solid white;
-              padding: 5px;
-              border-radius: 50%;
-              margin-right: 10px;
-              font-size: 16px;
-            }
-          }
-          .itemInfoTop {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-            font-size: 14px;
-            font-weight: 600;
-            color: gray;
-    
-            .limits {
-              border: 1px solid gray;
-              padding: 1px 3px;
-              margin: 0 10px;
-            }
-          }
-    
-          .desc {
-            font-size: 13px;
-            margin-bottom: 10px;
-          }
-    
-          .genre {
-            font-size: 14px;
-            color: lightgray;
-          }
-        }
-      }
-    }
+}
+
+.resultposter {
+  width:20%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.resultinfo {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.resulttitle {
+  font-weight: bold;
+  font-size:30px;
+  width:70%;
+  padding:30px;
+  color: #ffffff;
+  @include tablet{
+    font-size:17px;
+    width: 50%;
+    padding:10px;
+  }
+}
+.removeicon{
+  font-size: 32px !important;
+  color: red;
+  @include tablet{
+    font-size:20px !important;
+    width: auto;
+    padding:10px;
+  }
+
+}
+.resultyear {
+  font-size: 24px;
+  width:12%;
+  color: #cccccc;
+  @include tablet {
+    font-size:15px;
+    width: auto;
+  }
+}
