--- a/client/src/admin/login.scss
+++ b/client/src/admin/login.scss
@@ -19,16 +19,12 @@
   }
 }
 
-html {
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
 
 .loginbox {
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
