--- a/client/src/admin/editshow.scss
+++ b/client/src/admin/editshow.scss
@@ -49,7 +49,7 @@
   #posters,
   #trailers,
   #fullvideos {
-    background-color: #E50914;
+    background-color: #00a8e1;
     width: 90% !important;
     height: 1rem;
   }
@@ -78,7 +78,7 @@
     cursor: pointer !important;
     height: auto !important;
     border: none !important;
-    background-color: #E50914 !important;
+    background-color: #00a8e1 !important;
     color: transparent !important;
     display: flex !important;
     flex-direction: column;
@@ -104,7 +104,7 @@
   }
 
   #episodes {
-    background-color: #E50914;
+    background-color: #00a8e1;
     width: auto !important;
     height: 1rem;
   }
@@ -115,7 +115,7 @@
     cursor: pointer !important;
     height: auto !important;
     border: none !important;
-    background-color: #E50914 !important;
+    background-color: #00a8e1 !important;
     color: transparent !important;
     display: flex !important;
     flex-direction: column;
@@ -177,7 +177,7 @@
     height: auto !important;
     width: auto;
     border-radius: 5px;
-    background-color: red;
+    background-color: #00a8e1;
     margin: 5px 0 5px 0;
     color: white;
     font-weight: 900 !important;
@@ -217,7 +217,7 @@
     width: 100%;
     margin: 4px 1px;
     font-size: 15px;
-    background-color: red;
+    background-color: #00a8e1;
     font-weight: bold;
     border-radius: 5px;
     color: white;
@@ -279,7 +279,7 @@
         height: 40px;
         width: 100%;
         border-radius: 5px;
-        background-color: red;
+        background-color: #00a8e1;
         color: white;
         border: none;
         font-size: 18px;
@@ -292,7 +292,7 @@
   }
 
   .deleteicons {
-    color: red;
+    color: #00a8e1;
   }
 
   h5 {
