--- a/client/src/admin/login.scss
+++ b/client/src/admin/login.scss
@@ -102,7 +102,7 @@
         height: 35px;
         border-radius: 10px;
         margin: 4px 0;
-        background-color: gold;
+        background-color:#00a8e1;
         border: none;
         font-size: 16px;
         font-weight: 500;
@@ -149,7 +149,7 @@
 
     .createButton {
       padding: 7px;
-      background-color: gold;
+      background-color:#00a8e1;
       color: black !important;
       width: 250px;
       padding-left: 40px;
