--- a/client/src/admin/register.scss
+++ b/client/src/admin/register.scss
@@ -126,7 +126,7 @@
             height: 35px;
             border-radius: 10px;
             margin: 4px 0;
-            background-color: gold;
+            background-color: #00a8e1;
             border: none;
             font-size: 16px;
             font-weight: 500;
