--- a/client/src/featured/featured.scss
+++ b/client/src/featured/featured.scss
@@ -65,15 +65,18 @@
   }
 
   .info {
-    width: auto;
+    width:100%;
     position: absolute;
-    left: 50px;
-    bottom: 60px;
+    background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.4));
+    bottom:0px;
     color: white;
+    height: 100%;
     display: flex;
+    justify-content:end;
     flex-direction: column;
+    padding-left: 10%;
+    padding-bottom:10%;
     @include tablet{
-      bottom: 30px;
     }
 
     .line {
@@ -145,12 +148,12 @@
         @include mobile {
           padding: 5px 10px !important;
           padding: 0px;
-          margin: 5px;
+          margin:3px;
           font-size: 14px;
         }
         @include tablet {
           padding: 0 2px !important;
-          margin: 5px;
+          margin:3px;
           font-size: 14px;
         }
 
