--- a/client/src/styles/login.scss
+++ b/client/src/styles/login.scss
@@ -146,7 +146,9 @@
         color: rgb(6, 104, 143);
       }
     }
-
+    .forgotpassword{
+      color:rgb(6, 104, 143);
+    }
     .createButton {
       padding: 7px;
       background-color:#00a8e1;
