--- a/client/src/styles/categories.scss
+++ b/client/src/styles/categories.scss
@@ -26,13 +26,30 @@
 }
 
 .maincontainer {
-  width: 80%;
-  margin: 0 auto;
-  padding: 20px;
-  padding-top: 90px;
+   width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin:0 auto;
+  padding-top:40px;
+  font-family: 'Roboto', sans-serif;
+  background-color: #0f171e;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  left: 0 !important;
+  top: 0 !important;
 
   @include tablet {
     width: auto;
+    height: 100vh;
+  }
+}
+
+.maininside{
+  padding:40px;
+  @include mobile{
+    padding: 20px;
   }
 }
 
@@ -44,12 +61,14 @@
 .title {
   font-size: 40px;
   font-weight: bold;
-  padding-left: 1%;
+  padding-top: 5%;
+  padding-left:10%;
   margin-bottom: 20px;
 
   @include tablet {
     font-size: 30px;
     padding-left: 3%;
+    padding-top:20%;
   }
 }
 
@@ -59,7 +78,7 @@
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content:center;
 
   @include tablet {
     justify-content: space-evenly;
@@ -71,9 +90,9 @@
   padding: 40px;
   width: 200px;
   color: #f2f2f2;
-  margin-right: 10px;
+  margin-right:10px;
   object-fit: fill;
-  margin-top: 30px;
+  margin-top:14px;
   background: url('../images/genre.jpg');
   border-radius: 15px;
   font-size: 33px;
