--- a/client/src/styles/register.scss
+++ b/client/src/styles/register.scss
@@ -104,7 +104,7 @@
 
         #email,
         #password {
-            font-size: 17px;
+            font-size: 15px !important;
         }
 
         input {
