fixed mymovies and myseries white bg

--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -1,5 +1,5 @@
 .home{
-    background-color: #0b0b0b;
-    overflow: hidden;
-    font-family: 'Roboto', sans-serif;
+    background-color: #0f171e;
+    overflow-x: hidden;
+    height:100% !important;
 }
