fixed whole amazon prime

--- a/client/src/styles/addnavbar.scss
+++ b/client/src/styles/addnavbar.scss
@@ -54,7 +54,7 @@
     z-index: 999;
     list-style-type: none !important;
     top: 0;
-    background-color:#0f171e;
+    background-color:#00050D !important;
    
     .sidebar{
         display: block;
