--- a/client/src/styles/editshow.scss
+++ b/client/src/styles/editshow.scss
@@ -26,7 +26,7 @@
 }
 
 .editshows {
-  background-color: black !important;
+  background-color: #00050D !important;
   padding-top: 5% !important;
   height: auto !important;
   color: white;
