--- a/client/src/styles/myhome.scss
+++ b/client/src/styles/myhome.scss
@@ -1,5 +1,5 @@
 .myhome{
-    background-color: #0f171e !important;
+    background-color: #00050D !important;
     height:100% !important;
     overflow-x: hidden;
 }
