--- a/client/src/styles/register.scss
+++ b/client/src/styles/register.scss
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
-    background-color: #0f171e;
+    background-color:#00050D;
     position: absolute;
     margin: 0;
     padding: 0;
