--- a/client/src/styles/users.scss
+++ b/client/src/styles/users.scss
@@ -27,7 +27,7 @@
 }
 
 .users{
-    background-color:#0f171e !important;
+    background-color:#00050D !important;
     color:white;
     overflow: hidden;
     width: auto;
