--- a/client/src/styles/categories.scss
+++ b/client/src/styles/categories.scss
@@ -33,7 +33,7 @@
   margin:0 auto;
   padding-top:40px;
   font-family: 'Roboto', sans-serif;
-  background-color: #0f171e;
+  background-color:#00050D;
   position: absolute;
   margin: 0;
   padding: 0;
