--- a/client/src/styles/changepassword.scss
+++ b/client/src/styles/changepassword.scss
@@ -26,7 +26,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #0f171e;
+    background-color:#00050D;
     margin: 0 !important;
     padding: 0 !important;
     left: 0 !important;
