--- a/client/src/styles/featured.scss
+++ b/client/src/styles/featured.scss
@@ -147,12 +147,14 @@
 
         @include mobile {
           padding: 5px 10px !important;
+          justify-content:space-between;
           padding: 0px;
           margin:3px;
           font-size: 14px;
         }
         @include tablet {
           padding: 0 2px !important;
+          justify-content:space-around;
           margin:3px;
           font-size: 14px;
         }
