--- a/client/src/styles/listitem.scss
+++ b/client/src/styles/listitem.scss
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #0f171e;
+  --main-color: #00050D;
 }
 
 @mixin tablet {
@@ -25,8 +25,8 @@
 }
 
 .listcard {
-  width: 225px;
-  height: 120px;
+  width: 240px;
+  height: 140px;
   margin-right: 20px !important;
   overflow: hidden;
   padding: 0 !important;
@@ -41,10 +41,10 @@
   .model {
     position: absolute;
     top: 50%;
-    left:100%;
+    left: 100%;
     transform: translate(-50%, -50%);
     width: 400px;
-    background-color: #0f171e;
+    background-color: #00050D !important;
     padding: 20px;
 
     @include minimobile {
@@ -116,7 +116,7 @@
 
     .itemInfo {
       display: flex;
-      background-color: #000000;
+      background-color: #00050D;
       flex-direction: column;
       padding: 20px !important;
       z-index: 1000 !important;
