--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -23,7 +23,7 @@
 .homepage{
     width:100%;
     height: 100vh;
-    background-color:#0f171e;
+    background-color:#00050D;
 
    .num{
     color: #f2f2f2;
