--- a/client/src/styles/otp.scss
+++ b/client/src/styles/otp.scss
@@ -23,7 +23,7 @@
   .otp-container {
     width: 100%;
     height: 100vh;
-    background-color: #0f171e;
+    background-color:#00050D;
     display: flex;
     justify-content: center;
     align-items: center;
