--- a/client/src/styles/showbycategory.scss
+++ b/client/src/styles/showbycategory.scss
@@ -33,7 +33,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #0f171e;
+  background-color:#00050D;
   position: absolute;
   margin: 0;
   padding:0;
