--- a/client/src/styles/watchlist.scss
+++ b/client/src/styles/watchlist.scss
@@ -23,7 +23,7 @@
   width: auto;
   overflow: hidden;
   height: 100%;
-  background-color: #0f171e;
+  background-color: #00050D;
   margin: 0;
   padding: 0;
 
@@ -31,17 +31,19 @@
     height: 100% !important;
   }
 }
- .empty{
-  width:100%;
+
+.empty {
+  width: 100%;
   height: 100px;
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   color: gray;
   font-size: 20px;
- }
+}
+
 .myresults {
-  background-color: #0f171e;
+  background-color: #00050D;
   padding-top: 100px !important;
   border-top: none;
   display: flex;
@@ -60,10 +62,10 @@
   }
 
   p {
-    font-size:32px;
+    font-size: 32px;
     color: #f2f2f2;
     font-weight: bold;
-    width:75%;
+    width: 75%;
     text-align: left;
   }
 }
@@ -71,18 +73,20 @@
 .resultitem {
   display: flex;
   align-items: center;
-  justify-content:space-between;
+  justify-content: space-between;
   width: 75%;
   border: 2px solid #333333;
   margin-top: 3%;
   border-radius: 10px;
-  padding:10px;
+  padding: 10px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
-  @include tablet{
+
+  @include tablet {
     width: 90%;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
   }
+
   &:hover {
     background-color: #333333;
     transform: translateY(-5px);
@@ -90,7 +94,7 @@
 }
 
 .resultposter {
-  width:20%;
+  width: 20%;
   height: auto;
   border-radius: 10px;
 }
@@ -104,32 +108,37 @@
 
 .resulttitle {
   font-weight: bold;
-  font-size:30px;
-  width:70%;
-  padding:30px;
+  font-size: 30px;
+  width: 70%;
+  padding: 30px;
   color: #ffffff;
-  @include tablet{
-    font-size:17px;
+
+  @include tablet {
+    font-size: 17px;
     width: 50%;
-    padding:10px;
+    padding: 10px;
   }
 }
-.removeicon{
+
+.removeicon {
   font-size: 32px !important;
   color: red;
-  @include tablet{
-    font-size:20px !important;
+
+  @include tablet {
+    font-size: 20px !important;
     width: auto;
-    padding:10px;
+    padding: 10px;
   }
 
 }
+
 .resultyear {
   font-size: 24px;
-  width:12%;
+  width: 12%;
   color: #cccccc;
+
   @include tablet {
-    font-size:15px;
+    font-size: 15px;
     width: auto;
   }
 }
